--- a/templates/vueModifierMatiere.html
+++ b/templates/vueModifierMatiere.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>PlayerReview</title>
+		<title>PartielAWS</title>
 		<link rel="stylesheet" href="{{ url_for( 'static' , filename = 'css/bootstrap.min.css' ) }}">
 		<link rel="stylesheet" href="{{ url_for( 'static' , filename = 'css/css.css' ) }}" >
 		<script type="text/javascript" src="{{ url_for( 'static' , filename = 'js/jquery-1.11.2.js' ) }}"></script>
@@ -15,7 +15,7 @@
                 <div style="width: 30%; border: 1px solid black; background-color: #efefef; margin: auto;">
                     <h3 style="font-weight:bold;text-decoration:underline;">Modification de matière</h3>
                     <br/>
-                    <form role="form" action="/modifierMatiere" method="POST">
+                    <form role="form" action="/modifierMatiere/{{ matiere.id }}" method="POST">
                         <div class="form-group">
                             <label for="matiereModifie">Saisissez les informations du cours</label>
                             <input type="text" class="form-control" name="nom" id="nom" placeholder={{ matiere.nom }}/>
@@ -24,8 +24,7 @@
                             <br/>
                             <input type="text" class="form-control" name="heures" id="heures" placeholder={{ matiere.heures }}/>
                         </div>
-                        <button type="submit" class="btn btn-warning">Charger dans RDS</button>
-                        <button type="submit" class="btn btn-warning">Charger dans S3</button>
+                        <button type="submit" class="btn btn-warning">Modifier dans RDS</button>
                     </form>
                     <br/>
                     <br/>
