--- a/templates/vueAjoutMatiere.html
+++ b/templates/vueAjoutMatiere.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>PlayerReview</title>
+		<title>PartielAWS</title>
 		<link rel="stylesheet" href="{{ url_for( 'static' , filename = 'css/bootstrap.min.css' ) }}">
 		<link rel="stylesheet" href="{{ url_for( 'static' , filename = 'css/css.css' ) }}" >
 		<script type="text/javascript" src="{{ url_for( 'static' , filename = 'js/jquery-1.11.2.js' ) }}"></script>
@@ -25,7 +25,6 @@
                             <input type="text" class="form-control" name="heures" id="heures" placeholder="Saisir le nombre d'heures"/>
                         </div>
                         <button type="submit" class="btn btn-warning">Charger dans RDS</button>
-                        <button type="submit" class="btn btn-warning">Charger dans S3</button>
                     </form>
                     <br/>
                     <br/>
