--- a/templates/vueMatieres.html
+++ b/templates/vueMatieres.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Whatever</title>
+		<title>PartielAWS</title>
 		<link rel="stylesheet" href="{{ url_for( 'static' , filename = 'css/bootstrap.min.css' ) }}">
 		<link rel="stylesheet" href="{{ url_for( 'static' , filename = 'css/css.css' ) }}" >
 		<script type="text/javascript" src="{{ url_for( 'static' , filename = 'js/jquery-1.11.2.js' ) }}"></script>
@@ -32,7 +32,7 @@
                             <td>{{ matiere.nom }}</td>
                             <td>{{ matiere.description }}</td>
                             <td>{{ matiere.heures }}</td>
-                            <form action="/modifierMatiere/{{ matiere.id }}" Method="post">
+                            <form action="/modifierMatiereMenu/{{ matiere.id }}" Method="post">
                                 <td><button class="btn btn-danger">Modifier</button></td>
                             </form>
                             <form action="/supprimerMatiere/{{ matiere.id }}" Method="post">
@@ -41,6 +41,10 @@
                         </tr>
                     {% endfor %}
                 </tbody>
+            <br/>
+            <form action="/" Method="get" style="margin: auto;">
+                <td><button class="btn btn-warning">Retour</button></td>
+            </form>
             </table>
 	</body>
 </html>
