--- a/templates/vueAjoutMatiere.html
+++ b/templates/vueAjoutMatiere.html
@@ -18,11 +18,11 @@
                     <form role="form" action="/ajoutMatiere" method="POST">
                         <div class="form-group">
                             <label for="matiere">Saisissez les informations du cours</label>
-                            <input type="text" class="form-control" name="nom" id="nom" placeholder="Saisir la matière"/>
+                            <input required type="text" class="form-control" name="nom" id="nom" placeholder="Saisir la matière"/>
                             <br/>
-                            <input type="text" class="form-control" name="description" id="description" placeholder="Saisir la description"/>
+                            <input required type="text" class="form-control" name="description" id="description" placeholder="Saisir la description"/>
                             <br/>
-                            <input type="text" class="form-control" name="heures" id="heures" placeholder="Saisir le nombre d'heures"/>
+                            <input required type="number" class="form-control" name="heures" id="heures" placeholder="Saisir le nombre d'heures"/>
                         </div>
                         <button type="submit" class="btn btn-warning">Charger dans RDS</button>
                     </form>
